[tool.poetry]
name = "raw-nn"
version = "0.1.0"
description = "raw python implementation of neural networks"
authors = ["Mahdi Sadeghi"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0"
numpy = "^1.20.1"
pandas = "^1.2.2"
sklearn = "^0.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
